test integration of openiddict
