# BankApi.Service.Beta/MapEndpoints.Bank.cs
@@ -1,3 +1,9 @@
+using System.Security.Claims;
+using Microsoft.AspNetCore;
+using Microsoft.IdentityModel.Tokens;
+using OpenIddict.Abstractions;
+using OpenIddict.Server.AspNetCore;
+
 public static partial class ApiMapper
 {
     public static WebApplication MapBankEndpoints(this WebApplication app)
@@ -28,6 +34,34 @@ public static partial class ApiMapper
             .WithName("DeleteBank").WithSummary("Delete a bank")
             .WithDescription("Delete a bank in the Netherlands.");
 
+        app.MapPost("/connect/token", (HttpContext context) =>
+        {
+            var request = context.GetOpenIddictServerRequest()
+                          ?? throw new InvalidOperationException("Cannot get OpenIddict request.");
+
+            if (!request.IsPasswordGrantType()) return Results.BadRequest(new { error = "Unsupported grant type." });
+            
+            if (request.Username != "admin" || request.Password != "1234")
+                return Results.Unauthorized();
+
+            var claims = new List<Claim>
+            {
+                new(OpenIddictConstants.Claims.Subject, request.Username!),
+                new(OpenIddictConstants.Claims.Name, "Administrator")
+            };
+
+            var identity = new ClaimsIdentity(
+                claims,
+                TokenValidationParameters.DefaultAuthenticationType,
+                OpenIddictConstants.Claims.Name, OpenIddictConstants.Claims.Role);
+
+            var principal = new ClaimsPrincipal(identity);
+
+            return Results.SignIn(principal, properties: null,
+                authenticationScheme: OpenIddictServerAspNetCoreDefaults.AuthenticationScheme);
+
+        });
+        
         return app;
     }
 }
