# Specs.Generated/openapi_v2.json
@@ -20,6 +20,51 @@
     }
   ],
   "paths": {
+    "/connect/token": {
+      "post": {
+        "tags": [
+          "BankApi.Service.Beta"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "headers": {
+              "API-Version": {
+                "$ref": "#/components/headers/API-Version"
+              },
+              "Access-Control-Allow-Origin": {
+                "$ref": "#/components/headers/Access-Control-Allow-Origin"
+              },
+              "Access-Control-Expose-Headers": {
+                "$ref": "#/components/headers/GenericStringHeader"
+              },
+              "X-JWS-Signature": {
+                "$ref": "#/components/headers/GenericStringHeader"
+              },
+              "X-Rate-Limit-Limit": {
+                "$ref": "#/components/headers/X-Rate-Limit-Limit"
+              }
+            }
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          },
+          "422": {
+            "$ref": "#/components/responses/422"
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "429": {
+            "$ref": "#/components/responses/429"
+          }
+        },
+        "security": [ ]
+      }
+    },
     "/banks": {
       "get": {
         "tags": [
@@ -1011,6 +1056,9 @@
     }
   ],
   "tags": [
+    {
+      "name": "BankApi.Service.Beta"
+    },
     {
       "name": "Supervisory"
     },
